Smaller example/doc update for common library.

--- a/scai/common/examples/CMakeLists.txt
+++ b/scai/common/examples/CMakeLists.txt
@@ -61,6 +61,7 @@ set ( EXECUTABLE_FILES ${EXECUTABLE_FILES}
           DemoFactory
           DemoFactory1
           DemoFunction 
+          DemoGrid
           DemoLoopMacro
           DemoMath
           DemoMetaProgramming
