Added separate test for StencilStorage.

--- a/scai/lama/test/storage/CMakeLists.txt
+++ b/scai/lama/test/storage/CMakeLists.txt
@@ -53,6 +53,7 @@ scai_project (
         DIAStorageTest
         JDSStorageTest
         SparseAssemblyStorageTest
+        StencilStorageTest
         DenseStorageTest
 
         IOStreamTest
