Added jacobiIterate for stencil storage.
Summary:
Merged.

Corrected jacobiIterate for stencils, now works fine

Added solver example for stencil matrices.

Replaced old comparision for redistribution in lama solver example, now wrong.

Allow SCAI_IO_TYPE_DATA for reading matrices

Updated examples

Test Plan: run Jenkins on it

Reviewers: alongva

Differential Revision: https://dev.libama.org/D1

--- a/scai/solver/examples/CMakeLists.txt
+++ b/scai/solver/examples/CMakeLists.txt
@@ -40,6 +40,8 @@ endif ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
 add_subdirectory ( pardiso )
 add_subdirectory ( solver )
 add_subdirectory ( spy )
+add_subdirectory ( eigenvalue )
+add_subdirectory ( leastsquare )
 
 file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 
