--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -32,27 +32,14 @@
  # @date 09.06.2015
 ###
 
-### Set required CMake version
-cmake_minimum_required ( VERSION 2.8.8 )
-
-### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
-
-### set cmake quiet for untyped messages
-if    ( NOT SCAI_CMAKE_VERBOSE )
-    include ( Functions/setCMakeQuiet )
-endif ( NOT SCAI_CMAKE_VERBOSE )
-
-### Set PROJECT NAME / supported LANGUAGES
-project ( scai_logging CXX )
-
 ### includes ###
 
+project( scai_logging )
+
 ## important Variables for project
-include ( VersionDefinition )
+set ( SCAI_LOGGING_VERSION    1.0.0 )
 include ( SetProjectVariables)
-include ( Dependencies/internal )
-include ( Dependencies/external )
+set ( SCAI_LOGGING_EXTERNAL_DEPS                                                          ) # 2
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -61,15 +48,9 @@ include ( Functions/scaiProject )
 include ( Functions/relativeInstall )
 
 ### Include compile dependent things
-if    ( NOT SCAI_COMPLETE_BUILD )
-    include ( SetBuildFlags )
-    include ( VersionCheck/Compiler )
-    include ( Compiler/SetCPPFlags )
-else  ( NOT SCAI_COMPLETE_BUILD )
-    include ( Package/doc )
-    include ( Functions/CheckValueAtCompleteBuild )
-    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
-endif ( NOT SCAI_COMPLETE_BUILD )
+include ( SetBuildFlags )
+include ( VersionCheck/Compiler )
+include ( Compiler/SetCPPFlags )
 
 ## Boost for Test
 if ( BUILD_TEST )
@@ -146,6 +127,7 @@ foreach    ( TEST_FILE ${TEST_FILES} )
 endforeach ( TEST_FILE ${TEST_FILES} )
 
 # add test
+
 enable_testing()
 add_test ( logging_test test/test.sh )
 ## end subdir test
@@ -159,8 +141,9 @@ endif ( WIN32 )
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
-## add link libraries
-addInternalAndExternalLinkLibraries()
+## ToDo: add link libraries
+# addInternalAndExternalLinkLibraries()
+target_link_libraries( ${PROJECT_NAME} scai_common )
 
 ### install ###
 
@@ -175,8 +158,3 @@ install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
 ## add custum target distClean
 include ( CustomCommands/DistClean )
-
-### summary ###
-if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
-	include ( Summaries/${PROJECT_SURNAME} )
-endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
