--- a/scai/blaskernel/CMakeLists.txt
+++ b/scai/blaskernel/CMakeLists.txt
@@ -32,27 +32,15 @@
  # @date 11.11.2015
 ###
 
-### Set required CMake version
-cmake_minimum_required ( VERSION 2.8.8 )
-
-### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
-
-### set cmake quiet for untyped messages
-if    ( NOT SCAI_CMAKE_VERBOSE )
-    include ( Functions/setCMakeQuiet )
-endif ( NOT SCAI_CMAKE_VERBOSE )
-
 ### Set PROJECT NAME / supported LANGUAGES
-project ( scai_blaskernel CXX )
+project ( scai_blaskernel )
 
 ### includes ###
 
 ## important Variables for project
-include ( VersionDefinition )
+set ( SCAI_BLASKERNEL_VERSION 1.0.0 )
 include ( SetProjectVariables)
-include ( Dependencies/internal )
-include ( Dependencies/external )
+set ( SCAI_BLASKERNEL_EXTERNAL_DEPS   OpenMP CUDA MIC SCAI_BLAS                           ) 
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -61,47 +49,53 @@ include ( Functions/scaiProject )
 include ( Functions/relativeInstall )
 
 ### Include compile dependent things
-if    ( NOT SCAI_COMPLETE_BUILD )
-    include ( SetBuildFlags )
-    include ( VersionCheck/Compiler )
-    include ( Compiler/SetCPPFlags )
-else  ( NOT SCAI_COMPLETE_BUILD )
-    include ( Package/doc )
-    include ( Functions/CheckValueAtCompleteBuild )
-    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
-endif ( NOT SCAI_COMPLETE_BUILD )
+include ( SetBuildFlags )
+include ( VersionCheck/Compiler )
+include ( Compiler/SetCPPFlags )
 
 ## Boost for Test
 if ( BUILD_TEST )
     include( Package/BoostTest )
 endif ( BUILD_TEST )
 
-### include all search packages
-addInternalAndExternalPackages()
+### include [optional] packages, use SCAI wrappers of CMake modules
+
+include( Package/OpenMP )
+include( Package/CUDA )
+include( Package/MIC )
+include( Package/SCAI_BLAS )
+
+message( STATUS "CUDA: found = ${CUDA_FOUND}, inc = ${SCAI_CUDA_INCLUDE_DIR}, lib = ${SCAI_CUDA_LIBRARIES}" )
+message( STATUS "SCAI_BLAS: found = ${SCAI_BLAS_FOUND}, name = ${SCAI_BLAS_NAME}, inc = ${SCAI_SCAI_BLAS_INCLUDE_DIR}, lib = ${SCAI_SCAI_BLAS_LIBRARIES}" )
 
 ### finalize build flags
 include ( ConcludeFlags )
 
 ### add definitions
+
+include ( Settings/logging )
+include ( Settings/tracing )
+
 add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-add_definitions ( -D${SCAI_LOGGING_FLAG} )
+add_definitions ( -DSCAI_LOGGING_LEVEL_${SCAI_LOGGING_LEVEL} )
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
+add_definitions ( -DSCAI_TRACING_${SCAI_TRACING} )
 
 if ( SCAI_OMP_SCHEDULE_FLAG )
     add_definitions ( -D${SCAI_OMP_SCHEDULE_FLAG} )
 endif ( SCAI_OMP_SCHEDULE_FLAG )
-
-add_definitions ( -D${SCAI_LOGGING_FLAG} )
-add_definitions ( -D${SCAI_TRACING_FLAG} )
 
 if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
 endif ( WIN32 )
 
 ### Project System-Include ( also configured files )
+
 set( CONFIGURE_INCLUDE_DIR ${CMAKE_BINARY_DIR}/include )
 include_directories ( ../.. ${CONFIGURE_INCLUDE_DIR} )
-addInternalAndExternalIncludes()
+
+include_directories ( ${SCAI_SCAI_BLAS_INCLUDE_DIR} )
+include_directories ( ${SCAI_CUDA_INCLUDE_DIR} )
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 scai_project (
@@ -150,7 +144,12 @@ add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
 ## add link libraries
-addInternalAndExternalLinkLibraries()
+
+target_link_libraries( ${PROJECT_NAME} scai_common scai_logging scai_tracing scai_tasking scai_hmemo 
+                                       scai_kregistry scai_blaskernel )
+
+target_link_libraries( ${PROJECT_NAME} ${SCAI_CUDA_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} ${SCAI_SCAI_BLAS_LIBRARIES} )
 
 if ( USE_MIC )
     set ( MKLROOT $ENV{MKLROOT} )
@@ -172,7 +171,3 @@ install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 ### add custum target distClean
 include ( CustomCommands/DistClean )
 
-### summary ###
-if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
-    include ( Summaries/${PROJECT_SURNAME} )
-endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
