--- a/scai/solver/examples/leastsquare/CMakeLists.txt
+++ b/scai/solver/examples/leastsquare/CMakeLists.txt
@@ -1,5 +1,5 @@
 ###
- # @file CMakeLists.txt
+ # @file solver/examples/leastsquare/CMakeLists.txt
  #
  # @license
  # Copyright (c) 2009-2015
@@ -41,15 +41,23 @@ endforeach ( executable )
 include ( Functions/prepareExamplesMakeInc )
 prepareExamplesMakeInc()
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_Makefile.in" install_Makefile COPYONLY )
 
 foreach ( file ${INPUT_DATA} )
-	configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/${file}" "${CMAKE_CURRENT_BINARY_DIR}/${file}" )	
+    configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/${file}" "${CMAKE_CURRENT_BINARY_DIR}/${file}" )    
 endforeach ( file )
 
 #install examples
-install ( FILES ${EXAMPLE_FILES} ${HEADER} ${INPUT_DATA} ${CMAKE_CURRENT_BINARY_DIR}/make.inc 
-		  DESTINATION ${PROJECT_EXAMPLE_DIR}/least_squares )
 
-# install Makefile
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../../examples_Makefile.in"
-				 "${CMAKE_INSTALL_PREFIX}/${PROJECT_EXAMPLE_DIR}/leastsquare/Makefile" COPYONLY )
+set ( PROJECT_EXAMPLE_SUB_DIR "${PROJECT_EXAMPLE_DIR}/leastsquare" )
+
+install ( FILES       ${EXAMPLE_FILES}
+          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR} )
+
+install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/make.inc
+          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR} )
+
+install ( FILES       ${CMAKE_CURRENT_BINARY_DIR}/install_Makefile
+          DESTINATION ${PROJECT_EXAMPLE_SUB_DIR}
+          RENAME      Makefile  )
+
