--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -32,27 +32,17 @@
  # @date 10.06.2015
 ###
 
-### Set required CMake version
-cmake_minimum_required ( VERSION 2.8.8 )
-
-### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
-
-### set cmake quiet for untyped messages
-if    ( NOT SCAI_CMAKE_VERBOSE )
-    include ( Functions/setCMakeQuiet )
-endif ( NOT SCAI_CMAKE_VERBOSE )
-
 ### Set PROJECT NAME / supported LANGUAGES
-project ( scai_tasking CXX )
+
+project ( scai_tasking )
 
 ### includes ###
 
 ## important Variables for project
-include ( VersionDefinition )
+set ( SCAI_TASKING_VERSION    1.0.0 )
+
 include ( SetProjectVariables)
-include ( Dependencies/internal )
-include ( Dependencies/external )
+set ( SCAI_TASKING_EXTERNAL_DEPS             CUDA MIC                                     ) # 4
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -61,15 +51,9 @@ include ( Functions/scaiProject )
 include ( Functions/relativeInstall )
 
 ### Include compile dependent things
-if    ( NOT SCAI_COMPLETE_BUILD )
-    include ( SetBuildFlags )
-    include ( VersionCheck/Compiler )
-    include ( Compiler/SetCPPFlags )
-else  ( NOT SCAI_COMPLETE_BUILD )
-    include ( Package/doc )
-    include ( Functions/CheckValueAtCompleteBuild )
-    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
-endif ( NOT SCAI_COMPLETE_BUILD )
+include ( SetBuildFlags )
+include ( VersionCheck/Compiler )
+include ( Compiler/SetCPPFlags )
 
 ## Use Boost if BUILD_TEST is enabled
 if ( BUILD_TEST )
@@ -84,10 +68,13 @@ include ( ConcludeFlags )
 
 ### add definitions
 
-add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-add_definitions ( -D${SCAI_LOGGING_FLAG} )
-add_definitions( -DSCAI_TRACE_ON )
+include ( Settings/logging )
+include ( Settings/tracing )
+
+add_definitions ( ${ADDITIONAL_WARNING_FLAGS} )
+add_definitions ( -DSCAI_LOGGING_LEVEL_${SCAI_LOGGING_LEVEL} )
 add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
+add_definitions ( -DSCAI_TRACING_${SCAI_TRACING} )
 
 if    ( WIN32 )
 	add_definitions ( -DCOMMON_COMPILING_DLL )
@@ -144,7 +131,8 @@ add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
 ## add link libraries
-addInternalAndExternalLinkLibraries()
+
+target_link_libraries( ${PROJECT_NAME} scai_common scai_logging scai_tracing )
 
 ### install ###
 
@@ -159,8 +147,3 @@ install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
 ## add custum target distClean
 include ( CustomCommands/DistClean )
-
-### summary ###
-if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
-	include ( Summaries/${PROJECT_SURNAME} )
-endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
