--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -32,14 +32,15 @@
  # @date 09.06.2015
 ###
 
-### includes ###
-
 project( scai_logging )
 
+set ( INTERNAL_DEPS common )
+set ( SCAI_LOGGING_EXTERNAL_DEPS ) 
+
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
+
 ## important Variables for project
-set ( SCAI_LOGGING_VERSION    1.0.0 )
 include ( SetProjectVariables)
-set ( SCAI_LOGGING_EXTERNAL_DEPS                                                          ) # 2
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -139,11 +140,12 @@ endif ( WIN32 )
 
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
 
 ## ToDo: add link libraries
 # addInternalAndExternalLinkLibraries()
-target_link_libraries( ${PROJECT_NAME} scai_common )
+
+target_link_libraries ( ${PROJECT_NAME} ${INTERNAL_LIBS} )
 
 ### install ###
 
