--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -33,12 +33,16 @@
 ###
 
 ### Set PROJECT NAME 
+
 project ( scai_solver )
+
+set ( INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel utilskernel sparsekernel dmemo lama ) 
+
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ### includes ###
 
 ## important Variables for project
-set ( SCAI_SOLVER_VERSION 1.0.0 )
 include ( SetProjectVariables)                    # sets many project related directories
 include ( Dependencies/minimalSupportedVersions )
 
@@ -145,12 +149,11 @@ endif ( WIN32 )
 
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_SOLVER_VERSION} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
 
 ## add link libraries
 
-target_link_libraries( ${PROJECT_NAME} scai_common scai_logging scai_tracing scai_tasking scai_hmemo 
-                                       scai_kregistry scai_blaskernel scai_utilskernel scai_dmemo scai_lama )
+target_link_libraries ( ${PROJECT_NAME} ${INTERNAL_LIBS} )
 
 # Might be some additional solver libraries have been defined
 #message ( STATUS "SOLVER uses following solver libraries: ${SOLVER_SUB_LIBRARIES}" )
