--- a/scai/sparsekernel/CMakeLists.txt
+++ b/scai/sparsekernel/CMakeLists.txt
@@ -33,14 +33,17 @@
 ###
 
 ### Set PROJECT NAME / supported LANGUAGES
-project ( scai_sparsekernel CXX )
+project ( scai_sparsekernel )
+
+set ( INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel utilskernel ) 
+set ( SCAI_SPARSEKERNEL_EXTERNAL_DEPS OpenMP CUDA MIC SCAI_BLAS ) 
+
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ### includes ###
 
 ## important Variables for project
-set ( SCAI_SPARSEKERNEL_VERSION 1.0.0 )
 include ( SetProjectVariables)
-set ( SCAI_SPARSEKERNEL_EXTERNAL_DEPS OpenMP CUDA MIC SCAI_BLAS                           ) 
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -138,12 +141,11 @@ endif ( WIN32 )
 
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
 
 ## add link libraries
 
-target_link_libraries( ${PROJECT_NAME} scai_common scai_logging scai_tracing scai_tasking scai_hmemo 
-                                       scai_kregistry scai_blaskernel scai_utilskernel )
+target_link_libraries ( ${PROJECT_NAME} ${INTERNAL_LIBS} )
 
 if ( USE_MIC )
     set ( MKLROOT $ENV{MKLROOT} )
