--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -36,13 +36,16 @@
 
 project ( scai_tasking )
 
+set ( INTERNAL_DEPS common logging tracing )
+set ( SCAI_TASKING_EXTERNAL_DEPS CUDA MIC ) 
+
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
+
 ### includes ###
 
 ## important Variables for project
-set ( SCAI_TASKING_VERSION    1.0.0 )
 
 include ( SetProjectVariables)
-set ( SCAI_TASKING_EXTERNAL_DEPS             CUDA MIC                                     ) # 4
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -128,11 +131,11 @@ endif ( WIN32 )
 
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
 
 ## add link libraries
 
-target_link_libraries( ${PROJECT_NAME} scai_common scai_logging scai_tracing )
+target_link_libraries ( ${PROJECT_NAME} ${INTERNAL_LIBS} )
 
 ### install ###
 
