--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -35,12 +35,15 @@
 ### Set PROJECT NAME / supported LANGUAGES
 project ( scai_dmemo )
 
+set ( INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel utilskernel sparsekernel )
+set ( SCAI_DMEMO_EXTERNAL_DEPS OpenMP MPI GPI GraphPartitioning ) 
+
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
+
 ### includes ###
 
 ## important Variables for project
-set ( SCAI_DMEMO_VERSION      1.0.0 )
 include ( SetProjectVariables)
-set ( SCAI_DMEMO_EXTERNAL_DEPS        OpenMP                    MPI GPI GraphPartitioning ) # 10
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -163,13 +166,11 @@ endif ( WIN32 )
 
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
 
 ## add link libraries
 
-target_link_libraries( ${PROJECT_NAME} scai_common scai_logging scai_tracing scai_tasking scai_hmemo 
-                                       scai_kregistry scai_utilskernel )
-
+target_link_libraries ( ${PROJECT_NAME} ${INTERNAL_LIBS} )
 target_link_libraries ( ${PROJECT_NAME} ${SCAI_OPENMP_LIBRARIES} )
 target_link_libraries ( ${PROJECT_NAME} ${SCAI_MPI_LIBRARIES} )
 target_link_libraries ( ${PROJECT_NAME} ${SCAI_GPI_LIBRARIES} )
