--- a/scai/kregistry/CMakeLists.txt
+++ b/scai/kregistry/CMakeLists.txt
@@ -33,14 +33,17 @@
 ###
 
 ### Set PROJECT NAME / supported LANGUAGES
-project ( scai_kregistry CXX )
+project ( scai_kregistry )
+
+set ( INTERNAL_DEPS common logging )
+set ( SCAI_KREGISTRY_EXTERNAL_DEPS )
+
+string ( REGEX REPLACE "([a-z]+)" "${SCAI_LIBRARY_PREFIX}\\1" INTERNAL_LIBS "${INTERNAL_DEPS}")
 
 ### includes ###
 
 ## important Variables for project
-set ( SCAI_KREGISTRY_VERSION  1.0.0 )
 include ( SetProjectVariables)
-set ( SCAI_KREGISTRY_EXTERNAL_DEPS                                                        ) # 6
 include ( Dependencies/minimalSupportedVersions )
 
 ## needed functions
@@ -116,11 +119,11 @@ endif ( WIN32 )
 
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
-set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${SCAI_VERSION} )
 
 ## add link libraries
 
-target_link_libraries( ${PROJECT_NAME} scai_common scai_logging )
+target_link_libraries ( ${PROJECT_NAME} ${INTERNAL_LIBS} )
 
 ### install ###
 
